# jamtown

./: .clang-format  .gitignore  CMakeLists.txt
inc/: actionMessages.h  addTracksComponent.h  browserComponent.h  browserView.h  fileProcessor.h  fileScanner.h  inMemLibrary.h  library.h  libraryComponent.h  libraryView.h  mainComponent.h  playQueue.h  playQueueView.h  searchBoxComponent.h  searchService.h  timeFormatter.h  topBarComponent.h  trackInfo.h  transport.h  transportComponent.h  ui.h  utilities.h
src/: addTracksComponent.cpp  app.cpp  browserComponent.cpp  browserView.cpp  fileProcessor.cpp  fileScanner.cpp  inMemLibrary.cpp  library.cpp  libraryComponent.cpp  libraryView.cpp  mainComponent.cpp  playQueue.cpp  playQueueView.cpp  searchBoxComponent.cpp  searchService.cpp  topBarComponent.cpp  trackInfo.cpp  trackInfo.h  transport.cpp  transport.h  transportComponent.cpp  transportComponent.h  ui.h  utilities.cpp
